<resources>
    <string name="app_name">Kwordle</string>
    <string name="title_page">Katheryn\'s Wordle</string>
    <string name="title_page2Line">Katheryn\'s \nWordle</string>
    <string name="newGame">New Game</string>
    <string name="initial_text"> </string>
    <string name="correctAnswer">You are Correct!!!!\nThe answer was:</string>
    <string name="correctAnswer2">You finished in</string>
    <string name="correctDone">Done</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="answer">Answer goes here</string>
    <string name="answerTries">Answer goes here</string>
    <string name="wrongAnswer">Sorry you were wrong \n The answer was:</string>
    <string name="youSuck">You suck</string>
    <string name="oneTry">1 try</string>
    <string name="congrats">Congratulations you are Correct!!!! \n The answer was:</string>
    <string name="tries">\ tries</string>
    <string name="blewIt">You blew your\ </string>
    <string name="fiveLetterStart">New \nFive Letter Game</string>
    <string name="settingTitle">Settings</string>
    <string name="statisticsTitle">Statistics</string>
    <string name="resetWords">Reset Answers</string>
    <string name="played">Played</string>
    <string name="wins">Win %</string>
    <string name="changePlayer">Change \nPlayer</string>
    <string name="currentStreak">Current \nStreak</string>
    <string name="maxStreak">Max \nStreak</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="ten">10</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="guessDist">Guess Distribution</string>
    <string name="minTime">Quickest</string>
    <string name="maxTime">Longest</string>
    <string name="minutes">Minutes</string>
    <string name="player">Select Player</string>
    <string name="newPlayer">Enter New Player</string>
    <string name="newPlayerEntry">New Player</string>
    <string name="submit">Submit</string>
    <string name="newFiveLetter">5 Letter Game</string>
    <string name="newSixLetter">6 Letter Game</string>
    <string name="newTetris">Word Tetris</string>
    <string name="comingsoon">Coming Soon!!!</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="letterWords">\ Letter Words</string>

</resources>