<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/correct"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >

    <TextView
        android:id="@+id/correctBox2"
        android:text="@string/correctAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/answerBox2"
        android:text="@string/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/correctDone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correctDone"
        android:onClick="doneCorrectClick" />
</LinearLayout>