<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/correctPop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EB0B67C3">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/settingTitle"
        android:textSize="24sp" />

    <Button
        android:id="@+id/changePlayer"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@id/settingsTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:onClick="changePlayerClick"
        android:text="@string/changePlayer"
        android:textSize="12sp"
        tools:ignore="UsingOnClickInXml" />



    <Button
        android:id="@+id/resetWords"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@id/changePlayer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:onClick="resetWordsClick"
        android:text="@string/resetWords"
        android:textSize="12sp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/settingsDone"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:onClick="doneSettingsClick"
        android:text="@string/correctDone"
        android:textSize="12sp" />

</RelativeLayout>