<FrameLayout android:id="@+id/new_player_container_other"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >




    <RelativeLayout
        android:id="@+id/newPlayerEntryScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:foregroundTint="@color/white">

        <TextView
            android:id="@+id/newPlayerEntryTitle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/newPlayerEntry"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/newPlayerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPlayerEntryTitle"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/white"
            android:hint="@string/newPlayer"
            android:onClick="enterPlayer"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:onClick="submitClick"
            android:text="@string/submit" />


    </RelativeLayout>

</FrameLayout>