<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title_page2Line"
            android:textAlignment="center"
            android:textColor="#0E0E0E"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/newPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/player"
            android:textAlignment="center"
            android:textColor="#0E0E0E"
            android:textSize="24sp" />


        <Spinner
            android:id="@+id/playerSpinner"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="center">




            <Button
                android:id="@+id/newGameOpening"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:onClick="newGameClick"
                android:layout_marginEnd="10dp"
                android:textSize="24sp"
                android:text="@string/newGame" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:onClick="stats"
                app:srcCompat="@drawable/statistics" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="right"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="settings"
                app:srcCompat="@drawable/gear" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>